--- a/charts/stable/scalardl/Chart.yaml
+++ b/charts/stable/scalardl/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: scalar-dl
-description: Implementation scalar-dl.
+name: scalardl
+description: Implementation scalardl.
 type: application
 version: 1.0.0
 appVersion: 1.0.0
