--- a/charts/stable/scalardl/templates/ledger/prometheusrules.yaml
+++ b/charts/stable/scalardl/templates/ledger/prometheusrules.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: prometheus-operator
     release: prometheus
-  name: {{ include "scalar-dl.fullname" . }}-ledger-prometheus-alerts-rules
+  name: {{ include "scalardl.fullname" . }}-ledger-prometheus-alerts-rules
 {{- if .Values.ledger.prometheusRule.namespace }}
   namespace: {{ .Values.ledger.prometheusRule.namespace }}
 {{- end }}
@@ -14,7 +14,7 @@ spec:
   - name: LedgerAlerts
     rules:
     - alert: LedgerClusterDown
-      expr: kube_deployment_spec_replicas{deployment="{{ include "scalar-dl.fullname" . }}-ledger"} - kube_deployment_status_replicas_unavailable{deployment="{{ include "scalar-dl.fullname" . }}-ledger"} == 0
+      expr: kube_deployment_spec_replicas{deployment="{{ include "scalardl.fullname" . }}-ledger"} - kube_deployment_status_replicas_unavailable{deployment="{{ include "scalardl.fullname" . }}-ledger"} == 0
       for: 1m
       labels:
         severity: critical
@@ -24,7 +24,7 @@ spec:
         description: 'Ledger cluster is down, no resquest can be process'
 
     - alert: LedgerClusterDegraded
-      expr: kube_deployment_status_replicas_unavailable{namespace="{{ .Release.Namespace }}", deployment="{{ include "scalar-dl.fullname" . }}-ledger"} >= 1
+      expr: kube_deployment_status_replicas_unavailable{namespace="{{ .Release.Namespace }}", deployment="{{ include "scalardl.fullname" . }}-ledger"} >= 1
       for: 1m
       labels:
         severity: warning
@@ -34,7 +34,7 @@ spec:
         description: 'Ledger cluster is running in a degraded mode, some of the Ledger pods are not healthy'
 
     - alert: LedgerPodsPending
-      expr: kube_pod_status_phase{namespace="{{ .Release.Namespace }}", pod=~"^{{ include "scalar-dl.fullname" . }}-ledger-.*", phase="Pending"} > 0
+      expr: kube_pod_status_phase{namespace="{{ .Release.Namespace }}", pod=~"^{{ include "scalardl.fullname" . }}-ledger-.*", phase="Pending"} > 0
       for: 1m
       labels:
         severity: warning
@@ -44,7 +44,7 @@ spec:
         summary: 'Pod {{`{{$labels.pod}}`}} in namespace {{`{{$labels.namespace}}`}} in pending status.'
     
     - alert: LedgerPodsError
-      expr: kube_pod_container_status_waiting_reason{namespace="{{ .Release.Namespace }}",reason!="ContainerCreating",pod=~"^{{ include "scalar-dl.fullname" . }}-ledger-.*"} > 0
+      expr: kube_pod_container_status_waiting_reason{namespace="{{ .Release.Namespace }}",reason!="ContainerCreating",pod=~"^{{ include "scalardl.fullname" . }}-ledger-.*"} > 0
       for: 1m
       labels:
         severity: warning
