--- a/operation/roles/scalardl/tasks/main.yml
+++ b/operation/roles/scalardl/tasks/main.yml
@@ -2,4 +2,5 @@
 # roles scalardl entry-point
 - import_tasks: copy.yml
 - import_tasks: configuration.yml
+- import_tasks: schema.yml
 - import_tasks: scalardl.yml
