--- a/operation/roles/scalardl/tasks/copy.yml
+++ b/operation/roles/scalardl/tasks/copy.yml
@@ -16,4 +16,4 @@
     dest: "{{ remote_directory }}/helm/charts/config/{{ item }}"
   loop:
   - scalardl-custom-values.yaml
-  - scalar-schema-loading.yaml
+  - schema-loading-custom-values.yaml
