--- a/operation/roles/scalardl/tasks/schema.yml
+++ b/operation/roles/scalardl/tasks/schema.yml
@@ -1,17 +1,31 @@
 ---
-- name: Deploy Scalar Schema
+- name: Check if a previous Schema Loading was installed
+  k8s_info:
+    api_version: batch/v1
+    kind: Job
+    label_selectors:
+      - "app.kubernetes.io/name = schema-loading"
+    namespace: "{{ kubernetes_namespace }}"
+  register: batchjob_previous_list
+
+- name: Delete helm Schema Loading if failed
+  command: >-
+    {{ helm_binary_path }} delete load-schema
+  when: batchjob_previous_list | json_query('resources[*].status.conditions[?type==`Failed`].status[]') | unique == ["True"]
+
+- name: Deploy Schema Loading
   command: >-
     {{ helm_binary_path }} upgrade --install load-schema helm/charts/stable/schema-loading
     --namespace {{ kubernetes_namespace }}
     -f {{ remote_directory }}/helm/charts/config/schema-loading-custom-values.yaml
   when: deploy_scalar_load_schma
 
-- name: Wait until completion
+- name: Check Schema Loading completion
   k8s_info:
     api_version: batch/v1
     kind: Job
     label_selectors:
-      - "app.kubernetes.io/name= schema-loading"
+      - "app.kubernetes.io/name = schema-loading"
     namespace: "{{ kubernetes_namespace }}"
   register: batchjob_list
   until: batchjob_list | json_query('resources[*].status.conditions[?type==`Complete`].status[]') | unique == ["True"]
