--- a/charts/stable/schema-loading/templates/batchjob-cassandra.yaml
+++ b/charts/stable/schema-loading/templates/batchjob-cassandra.yaml
@@ -25,9 +25,9 @@ spec:
         -  "echo applying Scalar DL schema && dockerize --template create_schema.cql.tmpl:create_schema.cql && cqlsh --cqlversion=3.4.4 ${SCALAR_DB_CONTACT_POINTS} -u ${SCALAR_DB_USERNAME} -p ${SCALAR_DB_PASSWORD} -f create_schema.cql"
         env:
         - name: SCALAR_DB_CONTACT_POINTS
-          value: "{{ .Values.cassandra.host }}"
+          value: "{{ .Values.cassandra.contactPoints }}"
         - name: SCALAR_DB_CONTACT_PORT
-          value: "{{ .Values.cassandra.port }}"
+          value: "{{ .Values.cassandra.contactPort }}"
         - name: SCALAR_DB_USERNAME
           value: "{{ .Values.cassandra.username }}"
         - name: SCALAR_DB_PASSWORD
