--- a/operation/roles/scalardl/tasks/schema.yml
+++ b/operation/roles/scalardl/tasks/schema.yml
@@ -6,28 +6,28 @@
     label_selectors:
       - "app.kubernetes.io/name = schema-loading"
     namespace: "{{ kubernetes_namespace }}"
-  register: batchjob_previous_list
+  register: job_schema_loading_previous_has_failed
 
-- name: Delete helm Schema Loading if failed
+- name: Delete helm Schema Loading if the previous job has failed
   command: >-
     {{ helm_binary_path }} delete load-schema
-  when: batchjob_previous_list | json_query('resources[*].status.conditions[?type==`Failed`].status[]') | unique == ["True"]
+  when: job_schema_loading_previous_has_failed | json_query('resources[*].status.conditions[?type==`Failed`].status[]') | unique == ["True"]
 
-- name: Deploy Schema Loading
+- name: (Re) Deploy Schema Loading
   command: >-
     {{ helm_binary_path }} upgrade --install load-schema helm/charts/stable/schema-loading
     --namespace {{ kubernetes_namespace }}
     -f {{ remote_directory }}/helm/charts/config/schema-loading-custom-values.yaml
   when: deploy_scalar_load_schma
 
-- name: Check Schema Loading completion
+- name: Check Schema Loading job have been successful
   k8s_info:
     api_version: batch/v1
     kind: Job
     label_selectors:
       - "app.kubernetes.io/name = schema-loading"
     namespace: "{{ kubernetes_namespace }}"
-  register: batchjob_list
-  until: batchjob_list | json_query('resources[*].status.conditions[?type==`Complete`].status[]') | unique == ["True"]
+  register: job_schema_loading_has_failed
+  until: job_schema_loading_has_failed | json_query('resources[*].status.conditions[?type==`Complete`].status[]') | unique == ["True"]
   retries: 10
   delay: 5
