--- a/charts/stable/schema-loading/templates/batchjob-cassandra.yaml
+++ b/charts/stable/schema-loading/templates/batchjob-cassandra.yaml
@@ -19,18 +19,14 @@ spec:
       - name: schema-import
         image: "{{ .Values.cassandra.image.repository }}:{{ .Values.cassandra.image.version }}"
         imagePullPolicy: "{{ .Values.cassandra.image.pullPolicy }}"
-        command:
-        - /bin/bash 
-        - -c 
-        -  "echo applying Scalar DL schema && dockerize --template create_schema.cql.tmpl:create_schema.cql && cqlsh --cqlversion=3.4.4 ${SCALAR_DB_CONTACT_POINTS} -u ${SCALAR_DB_USERNAME} -p ${SCALAR_DB_PASSWORD} -f create_schema.cql"
         env:
-        - name: SCALAR_DB_CONTACT_POINTS
+        - name: CASSANDRA_HOST
           value: "{{ .Values.cassandra.contactPoints }}"
-        - name: SCALAR_DB_CONTACT_PORT
+        - name: CASSANDRA_PORT
           value: "{{ .Values.cassandra.contactPort }}"
-        - name: SCALAR_DB_USERNAME
+        - name: CASSANDRA_USERNAME
           value: "{{ .Values.cassandra.username }}"
-        - name: SCALAR_DB_PASSWORD
+        - name: CASSANDRA_PASSWORD
           value: "{{ .Values.cassandra.password }}"
         - name: CASSANDRA_REPLICATION_FACTOR
           value: "{{ .Values.cassandra.replicationFactor }}"
