add default permission to fix ansible ci

--- a/operations/roles/prometheus/tasks/copy.yml
+++ b/operations/roles/prometheus/tasks/copy.yml
@@ -9,4 +9,5 @@
   template:
     src: prometheus-custom-values.yaml.j2
     dest: "{{ remote_directory }}/helm/prometheus-custom-values.yaml"
+    mode: '0644'
     remote_src: no
