--- a/.github/workflows/operation_ansible_lint.yml
+++ b/.github/workflows/operation_ansible_lint.yml
@@ -4,14 +4,14 @@ on:
     branches:
       - master
     paths:
-      - operation/*.yml
-      - operation/roles/**
+      - operations/*.yml
+      - operations/roles/**
   push:
     branches:
       - master
     paths:
-      - operation/*.yml
-      - operation/roles/**
+      - operations/*.yml
+      - operations/roles/**
 
 jobs:
   ansible-lint:
