--- a/playbooks/roles/scalardl/tasks/copy.yml
+++ b/playbooks/roles/scalardl/tasks/copy.yml
@@ -3,7 +3,7 @@
   file:
     path: "{{ remote_directory }}/helm/charts/config"
     state: directory
-    mode: '0755'
+    mode: 0755
 
 - name: Copy helm charts
   synchronize:
@@ -14,7 +14,7 @@
   copy:
     src: "{{ local_helm_charts_values_directory }}/{{ item }}"
     dest: "{{ remote_directory }}/helm/charts/config/{{ item }}"
-    mode: '0644'
+    mode: 0644
   loop:
   - scalardl-custom-values.yaml
   - schema-loading-custom-values.yaml
