--- a/playbooks/roles/fluentbit/tasks/configuration.yml
+++ b/playbooks/roles/fluentbit/tasks/configuration.yml
@@ -3,11 +3,11 @@
   template:
     src: templates/fluent-bit-ds.yaml.j2
     dest: "{{ remote_manifests_directory }}/fluentbit/fluent-bit-ds.yaml"
-    mode: "0644"
+    mode: 0644
 
 - name: Template Fluentbit service monitor
   template:
     src: templates/fluent-bit-service-monitor.yaml.j2
     dest: "{{ remote_manifests_directory }}/fluentbit/fluent-bit-service-monitor.yaml"
-    mode: "0644"
+    mode: 0644
   when: fluent_activate_metrics
