--- a/playbooks/roles/fluentbit/tasks/copy.yml
+++ b/playbooks/roles/fluentbit/tasks/copy.yml
@@ -3,7 +3,7 @@
   file:
     path: "{{ remote_manifests_directory }}/fluentbit"
     state: directory
-    mode: '0755'
+    mode: 0755
 
 
 - name: Copy manifests
