--- a/conf/scalardl-custom-values.yaml
+++ b/conf/scalardl-custom-values.yaml
@@ -57,6 +57,12 @@ ledger:
   scalarLedgerConfiguration:
     dbContactPoints: cassandra-lb.internal.scalar-labs.com
 
+    # dbContactPoints: <Cosmos DB account endpoint>
+    # dbContactPort: null
+    # dbUsername: ""
+    # dbPassword: <Cosmos DB account primary master key>
+    # dbStorage: cosmos
+
   prometheusRule:
     enabled: true
 
