Add me to maintainers of schema-loading chart

--- a/charts/stable/schema-loading/Chart.yaml
+++ b/charts/stable/schema-loading/Chart.yaml
@@ -15,3 +15,5 @@ source: ["https://scalardl.readthedocs.io/en/latest/"]
 maintainers:
   - name: Paul Dozancuk
     email: paul.dozancuk@scalar-labs.com
+  - name: Yusuke Morimoto
+    email: yusuke.morimoto@scalar-labs.com
