Fix kubernetes python package to 11.0

--- a/playbooks/roles/kubectl/defaults/main.yml
+++ b/playbooks/roles/kubectl/defaults/main.yml
@@ -4,4 +4,4 @@ kubectl_version: v1.16.13
 kubectl_path: /usr/local/bin/kubectl
 kubectl_url: "https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubectl"
 kubectl_url_checksum_sha256: ab861ec3ec347062bd1b87f8d78d15cd1ce251e74c5fe662e434056962d2a2c9
-python_package: ['kubernetes', 'openshift', 'kubernetes-validate']
+python_package: ['kubernetes<12.0', 'openshift', 'kubernetes-validate']
