Rename value in schema-loading Helm chart
Renemd `replicationFactor` to `cassandraReplicationFactor` since it is specific
to Cassandra

--- a/charts/stable/schema-loading/templates/batchjob-schema-loading.yaml
+++ b/charts/stable/schema-loading/templates/batchjob-schema-loading.yaml
@@ -32,7 +32,7 @@ spec:
         - "-n"
         - "NetworkTopologyStrategy"
         - "-R"
-        - "{{ .Values.schemaLoading.replicationFactor }}"
+        - "{{ .Values.schemaLoading.cassandraReplicationFactor }}"
         {{- else if eq .Values.schemaLoading.database "cosmos" }}
         - "--cosmos"
         - "-r"
