--- a/.github/workflows/azure_terratest.yml
+++ b/.github/workflows/azure_terratest.yml
@@ -22,13 +22,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Terraform
-        uses: autero1/action-terraform@v0.1.0
+        uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ env.TF_VERSION }}
-
-      # - uses: actions/setup-python@v2
-      #   with:
-      #     python-version: "3.7"
+          terraform_wrapper: false
 
       - name: Install dependencies
         run: |
