--- a/.github/workflows/azure_terratest.yml
+++ b/.github/workflows/azure_terratest.yml
@@ -3,6 +3,9 @@ name: Integration-test-with-terratest-for-Azure-Kubernetes
 on:
   schedule:
     - cron: 0 15 * * *
+  pull_request:
+    branches:
+      - master
 
 jobs:
   terratest:
