scalardl: Use secret object for storing database username and password
Currently, database username and password are set directly in Deployment
`spec.template.spec.containers.env`, so it can be viewed by users with
any privileges. In general, credentials should only be visible to
administrators. So I change to use Secret objects for storing database
username and password.

Some users may want to use an existing Secret object. They can use
`ledger.existingSecret` to specify the Secret object name to use.

--- a/charts/stable/scalardl/templates/ledger/deployment.yaml
+++ b/charts/stable/scalardl/templates/ledger/deployment.yaml
@@ -43,9 +43,23 @@ spec:
           - name: SCALAR_DB_CONTACT_PORT
             value: "{{ .Values.ledger.scalarLedgerConfiguration.dbContactPort }}"
           - name: SCALAR_DB_USERNAME
-            value: "{{ .Values.ledger.scalarLedgerConfiguration.dbUsername }}"
+            valueFrom:
+              secretKeyRef:
+              {{- if .Values.ledger.existingSecret }}
+                name: {{ .Values.ledger.existingSecret }}
+              {{- else }}
+                name: {{ include "scalardl.fullname" . }}-ledger
+              {{- end }}
+                key: db-username
           - name: SCALAR_DB_PASSWORD
-            value: "{{ .Values.ledger.scalarLedgerConfiguration.dbPassword }}"
+            valueFrom:
+              secretKeyRef:
+              {{- if .Values.ledger.existingSecret }}
+                name: {{ .Values.ledger.existingSecret }}
+              {{- else }}
+                name: {{ include "scalardl.fullname" . }}-ledger
+              {{- end }}
+                key: db-password
           - name: SCALAR_DB_STORAGE
             value: "{{ .Values.ledger.scalarLedgerConfiguration.dbStorage }}"
           - name: SCALAR_DL_LEDGER_LOG_LEVEL
