--- a/charts/stable/scalardl/values.yaml
+++ b/charts/stable/scalardl/values.yaml
@@ -122,7 +122,7 @@ ledger:
   image:
     # ledger.image.repository -- Docker image
     repository: ghcr.io/scalar-labs/scalar-ledger
-    # ledger.image.tag -- Docker tag
+    # ledger.image.version -- Docker tag
     version: 2.1.0
     # ledger.image.pullPolicy -- Specify a imagePullPolicy
     pullPolicy: IfNotPresent
