schema-loading: Use secret for storing database username and password

--- a/charts/stable/schema-loading/templates/batchjob-schema-loading.yaml
+++ b/charts/stable/schema-loading/templates/batchjob-schema-loading.yaml
@@ -24,9 +24,9 @@ spec:
         - "-P"
         - "{{ .Values.schemaLoading.contactPort }}"
         - "-u"
-        - "{{ .Values.schemaLoading.username }}"
+        - "$(DB_USERNAME)"
         - "-p"
-        - "{{ .Values.schemaLoading.password }}"
+        - "$(DB_PASSWORD)"
         {{- if eq .Values.schemaLoading.database "cassandra" }}
         - "--cassandra"
         - "-n"
@@ -38,5 +38,24 @@ spec:
         - "-r"
         - "{{ .Values.schemaLoading.cosmosBaseResourceUnit }}"
         {{- end }}
+        env:
+        - name: DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+            {{- if .Values.schemaLoading.existingSecret }}
+              name: {{ .Values.schemaLoading.existingSecret }}
+            {{- else }}
+              name: {{ include "schema-loading.fullname" . }}
+            {{- end }}
+              key: db-username
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+            {{- if .Values.schemaLoading.existingSecret }}
+              name: {{ .Values.schemaLoading.existingSecret }}
+            {{- else }}
+              name: {{ include "schema-loading.fullname" . }}
+            {{- end }}
+              key: db-password
       restartPolicy: Never
   backoffLimit: 0
