Add a script file to update chart docs
This commit adds `update-chart-docs.sh` that updates README.md for each
Helm charts and `verify-chart-docs.sh` that checks if README.md needs to
be updated. `verify-chart-docs.sh` can be run in CI to prevent
forgetting to update README.md.

--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -89,3 +89,10 @@ jobs:
         with:
           command: "install"
           config: .github/ct.yaml
+
+  verify-chart-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Verify chart docs
+        run: ./scripts/verify-chart-docs.sh
