--- a/charts/stable/schema-loading/values.yaml
+++ b/charts/stable/schema-loading/values.yaml
@@ -20,7 +20,7 @@ schemaLoading:
 
   image:
     # schemaLoading.image.repository -- Docker image
-    repository: scalarlabs/scalardl-schema-loader
+    repository: ghcr.io/scalar-labs/scalardl-schema-loader
     # schemaLoading.image.tag -- Docker tag
     version: 1.2.0
     # schemaLoading.image.pullPolicy -- Specify a imagePullPolicy
