--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -55,6 +55,8 @@ jobs:
       - kubeval-chart
     env:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      DOCKER_USESR: scalar-git
+      DOCKER_REGISTRY: ghcr.io
     # Uses 1.16.9 since it doesn't support 1.16.13 in https://hub.docker.com/r/kindest/node/tags.
     strategy:
       matrix:
@@ -77,7 +79,7 @@ jobs:
       - name: Setup kubernetes (Kind) with registry, cassandra and schema
         run: |
           kubectl cluster-info
-          kubectl create secret docker-registry reg-docker-secrets --docker-server=https://index.docker.io/v2/ --docker-username=scalartest --docker-password=${{ env.DOCKER_PASSWORD }}
+          kubectl create secret docker-registry reg-docker-secrets --docker-server=${{ env.DOCKER_REGISTRY }} --docker-username=${{ env.DOCKER_USER }} --docker-password=${{ env.DOCKER_PASSWORD }}
           kubectl create -f .github/cassandra.yaml
           echo "Wait until cassandra is running" && sleep 100
           kubectl get pods,svc,endpoints,nodes -o wide
