--- a/playbooks/roles/scalardl/defaults/main.yml
+++ b/playbooks/roles/scalardl/defaults/main.yml
@@ -3,8 +3,8 @@ local_helm_charts_directory: ../../../../charts/stable
 local_helm_charts_values_directory: "{{ base_local_directory }}/"
 remote_directory: "/home/{{ ansible_user }}"
 docker_registry: ghcr.io
-docker_username: "{{ lookup('env','DOCKER_USER') }}"
-docker_password: "{{ lookup('env','DOCKER_ACCESS_TOKEN') }}"
+docker_username: "{{ lookup('env','DOCKER_REGISTRY_USER') }}"
+docker_password: "{{ lookup('env','DOCKER_REGISTRY_PASSWORD') }}"
 kubernetes_registry_secret_name: "reg-docker-secrets"
 helm_binary_path: /usr/local/bin/helm
 kubernetes_namespace: default
