--- a/playbooks/playbook-deploy-scalardl.yml
+++ b/playbooks/playbook-deploy-scalardl.yml
@@ -6,7 +6,7 @@
   vars:
     base_local_directory: "{{ lookup('env','SCALAR_K8S_CONFIG_DIR') }}"
     # docker_registry: "ghcr.io"
-    # docker_username: "{{ lookup('env','DOCKER_REGISTRY_USER') }}"
+    # docker_username: "{{ lookup('env','DOCKER_REGISTRY_USERNAME') }}"
     # docker_password: "{{ lookup('env','DOCKER_REGISTRY_PASSWORD') }}"
     # kubernetes_registry_secret_name: "reg-docker-secrets"
     # kubernetes_namespace: default
