Use secret object for storing database username and password  (#92)

--- a/charts/stable/scalardl/values.yaml
+++ b/charts/stable/scalardl/values.yaml
@@ -122,7 +122,7 @@ ledger:
   image:
     # ledger.image.repository -- Docker image
     repository: ghcr.io/scalar-labs/scalar-ledger
-    # ledger.image.tag -- Docker tag
+    # ledger.image.version -- Docker tag
     version: 2.1.0
     # ledger.image.pullPolicy -- Specify a imagePullPolicy
     pullPolicy: IfNotPresent
@@ -184,3 +184,6 @@ ledger:
 
   # ledger.affinity -- the affinity/anti-affinity feature, greatly expands the types of constraints you can express
   affinity: {}
+
+  # ledger.existingSecret -- Name of existing secret to use for storing database username and password
+  existingSecret: null
