--- a/charts/stable/scalardl/templates/ledger/service.yaml
+++ b/charts/stable/scalardl/templates/ledger/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "scalardl-ledger.labels" . | nindent 4 }}
   annotations:
-{{ toYaml .Values.ledger.service.annotations | indent 4 }}
+    {{- toYaml .Values.ledger.service.annotations | nindent 4 }}
 spec:
   type: {{ .Values.ledger.service.type }}
   clusterIP: None
