--- a/conf/scalardl-custom-values.yaml
+++ b/conf/scalardl-custom-values.yaml
@@ -38,7 +38,11 @@ envoy:
                 - key: app.kubernetes.io/name
                   operator: In
                   values:
-                    - scalar-ledger
+                    - scalardl
+                - key: app.kubernetes.io/app
+                  operator: In
+                  values:
+                    - envoy
             topologyKey: kubernetes.io/hostname
           weight: 50
 
@@ -93,7 +97,11 @@ ledger:
                 - key: app.kubernetes.io/name
                   operator: In
                   values:
-                    - scalar-ledger
+                    - scalardl
+                - key: app.kubernetes.io/app
+                  operator: In
+                  values:
+                    - ledger
             topologyKey: kubernetes.io/hostname
           weight: 50
 
