--- a/charts/stable/schema-loading/templates/batchjob-schema-loading.yaml
+++ b/charts/stable/schema-loading/templates/batchjob-schema-loading.yaml
@@ -19,8 +19,6 @@ spec:
         image: "{{ .Values.schemaLoading.image.repository }}:{{ .Values.schemaLoading.image.version }}"
         imagePullPolicy: "{{ .Values.schemaLoading.image.pullPolicy }}"
         args:
-        - "-h"
-        - "{{ .Values.schemaLoading.contactPoints }}"
         - "-P"
         - "{{ .Values.schemaLoading.contactPort }}"
         - "-u"
@@ -29,15 +27,23 @@ spec:
         - "$(DB_PASSWORD)"
         {{- if eq .Values.schemaLoading.database "cassandra" }}
         - "--cassandra"
+        - "-h"
+        - "{{ .Values.schemaLoading.contactPoints }}"
         - "-n"
         - "NetworkTopologyStrategy"
         - "-R"
         - "{{ .Values.schemaLoading.cassandraReplicationFactor }}"
         {{- else if eq .Values.schemaLoading.database "cosmos" }}
         - "--cosmos"
+        - "-h"
+        - "{{ .Values.schemaLoading.contactPoints }}"
         - "-r"
         - "{{ .Values.schemaLoading.cosmosBaseResourceUnit }}"
-        {{- end }}
+        {{- else if eq .Values.schemaLoading.database "dynamo"}}
+        - "--dynamo"
+        - "--region"
+        - "{{ .Values.schemaLoading.contactPoints }}"
+        {{ - end }}
         env:
         - name: DB_USERNAME
           valueFrom:
